<?xml version="1.0"?>
<package format="3">
  <name>sentry_bringup</name>
  <version>0.0.0</version>
  <description>System integration for sentry_nav_26</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sentry_sim</depend>
  <depend>rm_sim_26</depend>
  <depend>small_point_lio</depend>
  <depend>rviz2</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>sentry_local_planner</depend>
  <depend>sentry_global_planner</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>